--- a/index.html
+++ b/index.html
@@ -106,22 +106,23 @@
         </div>
     </section>
 
-    <section class="who reveal">
-        <div class="container">
-            <div class="context" id="who">
-                <div class="container_left parallax">
-                    <div class="img-who">
-                        <img src="img/whoSectionactu.jpg">
+    <!--RECURSOS-->
+    <section id="feature">
+        <div class="feature-box">
+            <div class="features">
+                <div class="title_text" id="service">
+                    <h1 class="title_h1">Serviços</h1>
+                    <div class="line"></div>
+                </div>
+
+                <div class="features-desc">
+                    <div class="features-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem finibus blandit. Vestibulum bibendum, justo eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra vulputate nec vitae massa. Aenean porta purus mauris, sit amet convallis justo consequat euismod</p>
                     </div>
                 </div>
-                <div class="container_right">
-                    <h1 class="title_h1 left_h1">Quem Somos</h1>
-                    <div class="line"></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem finibus blandit. Vestibulum bibendum, justo
-                        eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-                        cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra vulputate nec vitae massa. Aenean porta purus
-                        mauris, sit amet convallis justo consequat euismod.</p>
-                </div>
+            </div>
+            <div class="features-img">
+                <img src="img/whoSectionactu.jpg">
             </div>
         </div>
     </section>
@@ -151,26 +152,7 @@
     </section>
 
     
-    <!--RECURSOS-->
-    <section id="feature">
-        <div class="feature-box">
-            <div class="features">
-                <div class="title_text" id="service">
-                    <h1 class="title_h1">Serviços</h1>
-                    <div class="line"></div>
-                </div>
-
-                <div class="features-desc">
-                    <div class="features-text">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry text ever since the</p>
-                    </div>
-                </div>
-            </div>
-            <div class="features-img">
-                <img src="img/whoSectionactu.jpg">
-            </div>
-        </div>
-    </section>
+ 
 
     <section class="services reveal" >
         <div class="title_text"  id="projects">
