--- a/projecttwo.html
+++ b/projecttwo.html
@@ -9,10 +9,17 @@
     <link rel="icon" href="img/logo.png">
     <script src="https://kit.fontawesome.com/b9f1dd2de6.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
     <title>Soft Floor</title>
 </head>
@@ -46,50 +53,63 @@
             <a href="https://wa.me/5519996892268"><i class="fab fa-whatsapp"></i></a>
         </div>
     </div>
-    <div class="project_right">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/service_park1.jpeg" class="d-block w-100" alt="...">
+    <div class="adjust_project">
+        <div class="project_right">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/service_park1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/banner2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/service_park.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/services.jfif" class="d-block w-100" alt="...">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/banner2.jpeg" class="d-block w-100" alt="...">
+            </div>
+
+            <div class="social_media_project">
+                <div class="social_back">
+                    <a href=""><i class="fab fa-whatsapp"></i></a>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/service_park.jpeg" class="d-block w-100" alt="...">
+
+                <div class="social_back">
+                    <a href=""><i class="fab fa-instagram"></i></a>
                 </div>
-                <div class="carousel-item">
-                    <img src="img/services.jfif" class="d-block w-100" alt="...">
+
+                <div class="social_back">
+                    <a href=""><i class="fa fa-facebook"></i></a>
                 </div>
             </div>
         </div>
+
+        <div class="project_left">
+           
+            <div class="container_text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at egestas libero, in sollicitudin
+                    nunc. Morbi tincidunt lacinia porta. Proin sit amet placerat dolor. Nunc laoreet, purus nec
+                    sollicitudin fringilla, lorem quam consectetur ligula,
+                    id congue libero mi eget nisl. Aenean vestibulum eget erat sit amet vulputate. Proin mollis, tellus
+                    dignissim eleifend vehicula, diam nulla porta ante, nec finibus libero ex ac nunc. Vestibulum a diam
+                    non risus aliquet gravida. Donec ullamcorper
+                    lorem non vehicula malesuada. Ut consequat lacus et ligula condimentum, vitae lacinia nisl lobortis.
+                    Duis neque sapien, porta in nunc in, laoreet placerat nisi. Interdum et malesuada fames ac ante
+                    ipsum primis in faucibus. Cras egestas
+                    bibendum euismod. Vivamus facilisis aliquet augue, pellentesque blandit lacus aliquam sit amet.
+                    Aliquam erat volutpat. Nulla facilisi. Morbi dapibus sem non efficitur euismod. Vestibulum sed
+                    lectus non metus convallis convallis in vel
+                    enim. Pellentesque dui ligula, sagittis sed sem ac, vestibulum efficitur risus. Curabitur sit amet
+                    imperdiet nisl. Aliquam erat volutpat. Vivamus id ligula orci. Vestibulum aliquam elit urna, non
+                    lobortis odio facilisis id. Donec commodo
+                    lacinia sapien, sit amet luctus ante ultrices at.</p>
+            </div>
+        </div>
+        <button class="btn_projects">Voltar aos projetos</button>
     </div>
-
-    <div class="project_left">
-        <div class="social_media_project">
-            <div class="social_back">
-                <a href=""><i class="fab fa-whatsapp"></i></a>
-            </div>
-
-            <div class="social_back">
-                <a href=""><i class="fab fa-instagram"></i></a>
-            </div>
-
-            <div class="social_back">
-                <a href=""><i class="fa fa-facebook"></i></a>
-            </div>
-        </div>
-        <div class="container_text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at egestas libero, in sollicitudin nunc. Morbi tincidunt lacinia porta. Proin sit amet placerat dolor. Nunc laoreet, purus nec sollicitudin fringilla, lorem quam consectetur ligula,
-                id congue libero mi eget nisl. Aenean vestibulum eget erat sit amet vulputate. Proin mollis, tellus dignissim eleifend vehicula, diam nulla porta ante, nec finibus libero ex ac nunc. Vestibulum a diam non risus aliquet gravida. Donec ullamcorper
-                lorem non vehicula malesuada. Ut consequat lacus et ligula condimentum, vitae lacinia nisl lobortis. Duis neque sapien, porta in nunc in, laoreet placerat nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras egestas
-                bibendum euismod. Vivamus facilisis aliquet augue, pellentesque blandit lacus aliquam sit amet. Aliquam erat volutpat. Nulla facilisi. Morbi dapibus sem non efficitur euismod. Vestibulum sed lectus non metus convallis convallis in vel
-                enim. Pellentesque dui ligula, sagittis sed sem ac, vestibulum efficitur risus. Curabitur sit amet imperdiet nisl. Aliquam erat volutpat. Vivamus id ligula orci. Vestibulum aliquam elit urna, non lobortis odio facilisis id. Donec commodo
-                lacinia sapien, sit amet luctus ante ultrices at.</p>
-        </div>
-    </div>
-    <button class="btn_projects">Voltar aos projetos</button>
-
 
     <section class="footer">
         <footer>
@@ -104,7 +124,8 @@
     <section class="copy">
         <p>copyright &copy;2022 created by
             <a href="#">Matheus Venancio</a> &
-            <a href="https://www.linkedin.com/in/luis-henrique-bb8763225/">Luis Henrique</a></p>
+            <a href="https://www.linkedin.com/in/luis-henrique-bb8763225/">Luis Henrique</a>
+        </p>
 
     </section>
 </body>
