--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <section id="feature">
         <div class="feature-box">
             <div class="features">
-                <div class="title_text" id="service">
-                    <h1 class="title_h1">Serviços</h1>
+                <div class="title_text" id="who">
+                    <h1 class="title_h1">Quem somos</h1>
                     <div class="line"></div>
                 </div>
 
