--- a/projecttwo.html
+++ b/projecttwo.html
@@ -108,7 +108,7 @@
                     lacinia sapien, sit amet luctus ante ultrices at.</p>
             </div>
         </div>
-        <button class="btn_projects">Voltar aos projetos</button>
+        <button class="btn_projects"><a href="index.html#projects"> Voltar aos projetos</a></button>
     </div>
 
     <section class="footer">
