--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </div>
         <div class="carousel-inner" id="home">
             <div class="carousel-item active">
-                <img src="img/imgaereabanner.png" class="d-block w-100" alt="...">
+                <img src="img/baner4.jfif" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/baner4.jfif" class="d-block w-100" alt="...">
+                <img src="img/bannerimg.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/banner1.jpeg" class="d-block w-100" alt="...">
