--- a/projectone.html
+++ b/projectone.html
@@ -29,11 +29,11 @@
         <img src="img/logo.png">
         <ul>
             <li><a class="link" href="index.html">Home</a></li>
-            <li><a class="link" href="#service">Serviços</a></li>
-            <li><a class="link" href="#who">Quem somos</a></li>
-            <li><a class="active link" href="#projects">Projetos</a></li>
-            <li><a class="link" href="#faq">FAQ</a></li>
-            <li><a class="link" href="#contact">Contato</a></li>
+            <li><a class="link" href="index.html#service">Serviços</a></li>
+            <li><a class="link" href="index.html#who">Quem somos</a></li>
+            <li><a class="active link" href="index.html#projects">Projetos</a></li>
+            <li><a class="link" href="index.html#faq">FAQ</a></li>
+            <li><a class="link" href="index.html#contact">Contato</a></li>
         </ul>
         <label id="icon"><i class=" fas fa-bars "></i></label>
     </nav>
