--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--Button whatshap-->
     <div class="btn_whats">
         <div class="container_whats">
-            <a href="https://wa.me/5519996892268"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/5519996892268" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
     </div>
 
@@ -79,8 +79,8 @@
 
                             <a href="projects.html"></a>
 
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Parque</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, expedita mollitia aut doloribus quia at? Iste iusto, dolorem libero unde totam earum cupiditate omnis quibusdam vel placeat facere saepe dolor.</p>
                         </div>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                     <div class="card-service h-100">
                         <img src="img/service_piscina.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
+                            <h5 class="card-title">Piscina</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ipsa voluptas amet, beatae error tenetur repudiandae ipsum fugit maiores alias ab temporibus omnis corporis molestiae eligendi, debitis ad cum vitae.</p>
                         </div>
                     </div>
                 </div>
@@ -97,8 +97,8 @@
                     <div class="card-service h-100">
                         <img src="img/service_park.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Creche</h5>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem magnam aut eligendi facilis totam nihil illum, aliquam ipsum voluptate ab deleniti rem, at temporibus, possimus ducimus magni quae debitis distinctio.</p>
                         </div>
                     </div>
                 </div>
@@ -209,29 +209,6 @@
         </div>
     </section>
 
-    <section class="partners reveal">
-        <div class="title_text">
-            <h1 class="title_h1 partners_text">clientes</h1>
-            <div class="line left"></div>
-        </div>
-        <div class="logo_partners">
-            <div class="the_partners">
-                <img src="img/logo.png" alt="">
-            </div>
-
-            <div class="the_partners">
-                <img src="img/logo.png" alt="">
-            </div>
-
-            <div class="the_partners">
-                <img src="img/logo.png" alt="">
-            </div>
-
-            <div class="the_partners">
-                <img src="img/logo.png" alt="">
-            </div>
-        </div>
-    </section>
     <!--FAQ-->
     <section class="faq reveal" id="faqscroll">
         <div class="title_text">
@@ -243,39 +220,63 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Accordion Item #1
+                      Duvida #1
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                      <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Accordion Item #2
+                        Duvida #2
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Accordion Item #3
+                        Duvida #3
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
                     </div>
                   </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Duvida #4
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFive">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        Duvida #5
+                      </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                      </div>
+                    </div>
+                  </div>
               </div>
     </div>
     </section>
@@ -330,7 +331,7 @@
 
 
                     <label for=""></label>
-                    <textarea placeholder="Mande uma mensagem para gente" maxlength="120"></textarea>
+                    <textarea placeholder="Envie uma mensagem" maxlength="120"></textarea>
 
                     <button class="btn_form">Enviar</button>
 
@@ -387,8 +388,7 @@
 
     <section class="copy">
         <p>copyright &copy;2022 created by
-            <a href="#">Matheus Venancio</a> &
-            <a href="https://www.linkedin.com/in/luis-henrique-bb8763225/">Luis Henrique</a></p>
+            <a href="https://www.linkedin.com/in/matheusvenanciocordeiro/" target="_blank">Matheus Venancio Cordeiro</a></p>
 
     </section>
     <script src="js/script.js">
