--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
     <nav>
-        <img src="img/logo.png">
+        <a href="#home"><img src="img/logo.png"></a>
+
+        
         <ul>
             <li><a class="active link" href="#home">Home</a></li>
             <li><a class="link" href="#service">Serviços</a></li>
