--- a/projecthree.html
+++ b/projecthree.html
@@ -26,7 +26,8 @@
 
 <body>
     <nav>
-        <img src="img/logo.png">
+        <a href="index.html#home"><img src="img/logo.png"></a>
+
         <ul>
             <li><a class="link" href="index.html">Home</a></li>
             <li><a class="link" href="index.html#service">Serviços</a></li>
