missão, visão e valor

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 </div>
                 <div class="col">
                     <div class="card-service h-100">
-                        <img src="img/service_piscina.jpeg" class="card-img-top" alt="...">
+                        <img src="img/sesicampinas.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Piscina</h5>
+                            <h5 class="card-title">Sesi Campinas</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ipsa voluptas amet, beatae error tenetur repudiandae ipsum fugit maiores alias ab temporibus omnis corporis molestiae eligendi, debitis ad cum vitae.</p>
                         </div>
                     </div>
@@ -340,13 +340,16 @@
                 </div>
                 <div class="container_right">
                     <h4>Missão</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    <p>Ser a empresa em solução de piso de borracha granulado colorido, garantindo aos seus clientes alta qualidade e excelência em serviços comprometido com todas as normas ABNT , proporcionando segurança, conforto, durabilidade e total satisfação de material e serviços aplicados.</p>
 
                     <h4>Visão</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    <p>Ter compromisso acima de tudo na entrega dos materiais e serviços prestados, contando sempre com inovações nos processos para melhor atender, trazer sempre alta qualidade e tecnologia para melhor facilidade no atendimento,trazendo melhoria contínua para se expandir no mercado na região que atua em todo território nacional.</p>
 
                     <h4>Valor</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    <p>1)	Integridade e honestidade.<br>
+                        2)	Empenho para clientes e parceiros por melhoria e alta tecnologia.<br>
+                        3)	Consciência ambiental, produto 100% reciclável.<br>
+                        4)	Atitude crítica,dedicação para com qualidade e compromisso com clientes, parceiros e colaboradores.</p>
 
                     <div class="line left"></div>
                     <h5>Ligue para nós: (19) 99689-2268</h5>
