--- a/index.html
+++ b/index.html
@@ -220,60 +220,49 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Duvida #1
+                        1) COMO O PISO DE BORRACHA GRANULADO SOFTFLOOR PODE SER INSTALADO?
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                        <strong>PODE SER INSTALADO DIRETO AO SOLO BATIDO, OU EM PISO DE CONCRETO EXISTENTE.</strong>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Duvida #2
+                        2) PRECISA DE PROJETO DE EXECUÇÃO PARA REALIZAR O SERVIÇOS?
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                        <strong>NÃO PRECISA.NÓS DA SOFTFLOOR, PODEMOS FAZER DESENHOS ALEATÓRIOS, MARCAS, LOGOTIPOS, COM CORES E DESENHOS DE SUA PREFERÊNCIA CONFORME SEU ESPAÇO, SE PRECISAR, TEMOS NOSSA EQUIPE DE ENGENHARIA PARA PROJETAR EXATAMENTE O QUE DESEJAR EM SUA OBRA</strong>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Duvida #3
+                        3) COMO É REALIZADA AS ANIMAÇÕES E DESENHOS,E CORES,SOBRE O PISO DE BORRACHA GRANULADO?
+
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                        <strong>TEMOS NOSSA EQUIPE DE ENGENHARIA QUE PROJETA OS DESENHOS NA PLANTA BAIXA DA OBRA COM DETALHES EXCLUSIVOS, CORES DA SOFTFLOOR, COM DESENHOS PEDAGÓGICOS COMO: CARACOL, AMARELINHA, SOL, LOGOTIPOS DA EMPRESA PARA MELHOR ATENDER O CLIENTE.</strong>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        Duvida #4
+                        4) COMO TENHO CERTEZA DA SEGURANÇA DO PISO DE BORRACHA GRANULADO ?
                       </button>
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
-                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFive">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        Duvida #5
-                      </button>
-                    </h2>
-                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        <strong>Lorem ipsum dolor sit amet</strong>  consectetur adipisicing elit. Quae ipsam earum temporibus, quasi laboriosam voluptatem facere amet explicabo reprehenderit, similique dolorum nisi esse sequi nihil tempora facilis ut quod cupiditate?.
+                        <strong>A SOFTFLOOR ATENDE AS NORMAS ABNT DE SEGURANÇA, CONFORME A ALTURA DO BRINQUEDO ELE TEM UMA ESPESSURA DE SEGURANÇA QUE IMPACTA A QUEDA (CASO OCORRA)NO PISO DE BORRACHA, ELE É 100% DRENANTE, 100% ANTI-DERRAPANTE,SUPER MACIO E 100% ECOLOGICAMENTE CORRETO.</strong>
                       </div>
                     </div>
                   </div>
