--- a/projectone.html
+++ b/projectone.html
@@ -42,7 +42,7 @@
     <div class="back_title">
         <div class="title_section">
             <div class="text_right">
-                <h1 class="title_h1">Projeto um</h1>
+                <h1 class="title_h1">Sesi, Campinas-SP</h1>
                 <div class="line configure"></div>
             </div>
         </div>
