--- a/projecthree.html
+++ b/projecthree.html
@@ -42,7 +42,7 @@
     <div class="back_title">
         <div class="title_section">
             <div class="text_right">
-                <h1 class="title_h1">Projeto três</h1>
+                <h1 class="title_h1">Praça Cândido Portinari, Belo Horizonte-MG</h1>
                 <div class="line configure"></div>
             </div>
         </div>
