--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
 
 
 
-    <section class="services reveal">
+    <section class="projects reveal">
         <div class="title_text" id="projects">
             <h1 class="title_h1">projetos</h1>
             <div class="line"></div>
         </div>
-        <div class="services_align">
+        <div class="projects_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <a href="projectone.html">
