--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <div class="card">
                         <img src="img/epdm.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">EPDM</h5>
-                            <p class="card-text">É a borracha mais nobre do mundo, sintética 100% inteira colorida e com
+                            <h5 class="card-title titleservice">EPDM</h5>
+                            <p class="card-text textservice">É a borracha mais nobre do mundo, sintética 100% inteira colorida e com
                                 16 tonalidades de cores diferentes.</p>
                         </div>
                     </div>
