--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <div class="card">
                         <img src="img/sbr.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">SBR</h5>
-                            <p class="card-text">Grânulos de pneu 100% reciclado pigmentada, produto nacional, 100%
+                            <h5 class="card-title titleservice">SBR</h5>
+                            <p class="card-text textservice">Grânulos de pneu 100% reciclado pigmentada, produto nacional, 100%
                                 drenante e impactos, maciez e conforto, inclusive ela é antiderrapante.</p>
                         </div>
                     </div>
