--- a/index.html
+++ b/index.html
@@ -84,12 +84,15 @@
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
-        <div class="text_services">
-            <p>O piso granulado projetado, pode ser feito em EPDM ou SBR, sendo que em EPDM tem uma diversidade maior de
-                cores.
-                O SBR que é a borracha nacional pigmentada tem uma
-                variedade menor de cores.
-                Nosso piso possui uma base que possibilita uma capacidade maior de absorção de impacto</p>
+        <div class="div_text">
+            <div class="text_services">
+                <p>O piso granulado projetado, pode ser feito em EPDM ou SBR, sendo que em EPDM tem uma diversidade
+                    maior de
+                    cores.
+                    O SBR que é a borracha nacional pigmentada tem uma
+                    variedade menor de cores.
+                    Nosso piso possui uma base que possibilita uma capacidade maior de absorção de impacto</p>
+            </div>
         </div>
         <div class="services_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -98,7 +101,8 @@
                         <img src="img/epdm.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title titleservice">EPDM</h5>
-                            <p class="card-text textservice">É a borracha mais nobre do mundo, sintética 100% inteira colorida e com
+                            <p class="card-text textservice">É a borracha mais nobre do mundo, sintética 100% inteira
+                                colorida e com
                                 16 tonalidades de cores diferentes.</p>
                         </div>
                     </div>
@@ -108,7 +112,8 @@
                         <img src="img/sbr.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title titleservice">SBR</h5>
-                            <p class="card-text textservice">Grânulos de pneu 100% reciclado pigmentada, produto nacional, 100%
+                            <p class="card-text textservice">Grânulos de pneu 100% reciclado pigmentada, produto
+                                nacional, 100%
                                 drenante e impactos, maciez e conforto, inclusive ela é antiderrapante.</p>
                         </div>
                     </div>
@@ -136,15 +141,17 @@
 
                 <div class="features-desc">
                     <div class="features-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum
-                            molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem
-                            finibus blandit. Vestibulum bibendum, justo eu dapibus convallis, justo lorem sagittis
-                            risus, non volutpat felis sapien non libero. Nulla facilisi. Maecenas ut nulla est. Maecenas
-                            vitae semper eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-                            cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem
-                            ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim
-                            viverra vulputate nec vitae massa. Aenean porta purus mauris, sit amet convallis justo
-                            consequat euismod</p>
+                        <p>Empresa especializada na execução de piso de borracha ecologicamente correta, voltada para
+                            garantir a melhor qualidade e com alta tecnologia em seus insumos.Todos seus produtos são
+                            reutilizados de pneus recicláveis que são retirados do meio ambiente.
+                            Fundada em 2017, a SoftFloor tem orgulho em atender todo o território nacional trazendo o
+                            melhor piso de borracha reciclável e garantir a seus clientes a melhor performance na
+                            aplicação e ser a solução para todos os diferentes ambientes sendo eles internos ou externos
+                            e trazer uma criatividade de cores, a melhor maciez, segurança para melhor atender a sua
+                            obra.
+                            “ A SoftFloor não executa apenas um projeto mas sim da vida a sua criação de uma forma
+                            lúdica e ímpar para realizar seu sonho”
+                            “ Contamos com você ! para sempre estarmos juntos para novas conquistas”</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +208,7 @@
                         <div class="card">
                             <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Tibagi, Parana</h5>
 
                             </div>
                         </div>
@@ -363,10 +370,9 @@
                         segurança, conforto, durabilidade e total satisfação de material e serviços aplicados.</p>
 
                     <h4>Visão</h4>
-                    <p>Ter compromisso acima de tudo na entrega dos materiais e serviços prestados, contando sempre com
-                        inovações nos processos para melhor atender, trazer sempre alta qualidade e tecnologia para
-                        melhor facilidade no atendimento,trazendo melhoria contínua para se expandir no mercado na
-                        região que atua em todo território nacional.</p>
+                    <p>Ter compromisso na entrega dos materiais e serviços prestados, contando sempre com inovações nos
+                        processos, alta qualidade e tecnologia para o melhor atendimento, trazendo melhoria contínua
+                        para se expandir no mercado na região em que atua e em todo território nacional.</p>
 
                     <h4>Valor</h4>
                     <p>1) Integridade e honestidade.<br>
