--- a/index.html
+++ b/index.html
@@ -305,16 +305,14 @@
             <div class="context">
                 <div class="container_left parallax">
                     <h4>Informações</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at justo quis justo elementum
-                        molestie vel eget nisl. Quisque lobortis pharetra urna eu tempus. Integer id purus sed lorem
-                        finibus blandit. Vestibulum bibendum, justo
-                        eu dapibus convallis, justo lorem sagittis risus, non volutpat felis sapien non libero. Nulla
-                        facilisi. Maecenas ut nulla est. Maecenas vitae semper eros. Vestibulum ante ipsum primis in
-                        faucibus orci luctus et ultrices posuere
-                        cubilia curae; Etiam porttitor risus sit amet est accumsan, condimentum suscipit lorem
-                        ultricies. Aenean sollicitudin finibus nulla et viverra. Maecenas et metus sit amet enim viverra
-                        vulputate nec vitae massa. Aenean porta purus
-                        mauris, sit amet convallis justo consequat euismod.</p>
+                    <p>SoftFloor, piso de borracha granulada ecológica feita com pneus descartados, econômico,inteligente,moldável no local e feita em diversas cores.
+                        É recomendado para as áreas internas e externas para a sua obra como:
+                        Piscina: Antiderrapante e drenagem.
+                        Playground: Macio, perfeito para a segurança de crianças e limpo.
+                        Esportivo: Anti-Impacto, perfeita para exercícios físicos.
+                        Consulte todas as nossas opções: ( SoftFloor – Piso de Borracha Granulada Ecológica)
+                        Produto em EPDM ou SBR, com vários tipos de cores, atendimento personalizado, execução perfeita para a sua obra, fazemos seu projeto, orçamento gratuito pelo WhatsApp e E-mail
+                        </p>
 
                     <div class="input_form">
                         <label for="name"></label>
