--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </div>
     </div>
 
-    <section class="services reveal">
-        <div class="title_text" id="service">
+     
+    <section class="services reveal overflow">
+       <div class="title_text" id="service">
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
@@ -128,10 +129,12 @@
                 proporcionar o melhor acabamento, com conforto, segurança e maciez, 100% reciclado, 100% drenante, com
                 alta durabilidade.</p>
         </div>
+       
     </section>
+   
 
     <!--RECURSOS-->
-    <section id="feature">
+    <section id="feature" class="overflow">
         <div class="feature-box">
             <div class="features">
                 <div class="title_text" id="who">
@@ -161,7 +164,7 @@
         </div>
     </section>
 
-    <section class="projects reveal">
+    <section class="projects reveal overflow">
         <div class="title_text" id="projects">
             <h1 class="title_h1">projetos</h1>
             <div class="line"></div>
@@ -220,7 +223,7 @@
 
 
     <!--FAQ-->
-    <section class="faq reveal" id="faqscroll">
+    <section class="faq reveal overflow" id="faqscroll">
         <div class="title_text">
             <h1 class="title_h1">principais duvidas</h1>
             <div class="line left"></div>
@@ -295,7 +298,7 @@
         </div>
     </section>
 
-    <section class="form reveal">
+    <section class="form reveal overflow">
         <div class="title_text" id="contact">
             <h1 class="title_h1">contato</h1>
             <div class="line left"></div>
@@ -409,7 +412,7 @@
         </div>
     </section>
 
-    <section class="footer">
+    <section class="footer overflow">
         <footer>
             <div class="logo"><img src="img/logo.png"></div>
             <div class="mensagem">
@@ -419,7 +422,7 @@
 
     </section>
 
-    <section class="copy">
+    <section class="copy overflow">
         <p>copyright &copy;2022 created by
             <a href="https://www.linkedin.com/in/matheusvenanciocordeiro/" target="_blank">Matheus Venancio Cordeiro</a>
         </p>
