--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         </div>
     </div>
 
-     
+
     <section class="services reveal overflow">
-       <div class="title_text" id="service">
+        <div class="title_text" id="service">
             <h1 class="title_h1">Serviços</h1>
             <div class="line"></div>
         </div>
@@ -129,9 +129,9 @@
                 proporcionar o melhor acabamento, com conforto, segurança e maciez, 100% reciclado, 100% drenante, com
                 alta durabilidade.</p>
         </div>
-       
+
     </section>
-   
+
 
     <!--RECURSOS-->
     <section id="feature" class="overflow">
@@ -172,51 +172,51 @@
         <div class="projects_align">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
-                    <a href="projectone.html">
-                        <div class="card">
-                            <img src="img/Sesi- Campinas.jpeg" class="card-img-top image-img" alt="Project one">
-                            <div class="card-body">
-                                <h5 class="card-title">Sesi, Campinas-SP</h5>
 
-                            </div>
+                    <div class="card">
+                        <img src="img/Sesi-Campinas.jpeg" class="card-img-top image-img" alt="Project one">
+                        <div class="card-body">
+                            <h5 class="card-title">Sesi, Campinas-SP</h5>
+
                         </div>
-                    </a>
+                    </div>
+
                 </div>
                 <div class="col">
-                    <a href="projecttwo.html">
-                        <div class="card">
-                            <img src="img/Condomínio Treviso-Cascavel-Paraná.jpeg" class="card-img-top image-img"
-                                alt="Project two">
-                            <div class="card-body">
-                                <h5 class="card-title">Condomínio Treviso, Paraná</h5>
 
-                            </div>
+                    <div class="card">
+                        <img src="img/Condominio-Treviso-Cascavel-Parana.jpeg" class="card-img-top image-img"
+                            alt="Project two">
+                        <div class="card-body">
+                            <h5 class="card-title">Condomínio Treviso, Paraná</h5>
+
                         </div>
-                    </a>
+                    </div>
+
                 </div>
                 <div class="col">
-                    <a href="projecthree.html">
-                        <div class="card">
-                            <img src="img/Praça Cândido Portinari - Belo Horizonte.jpeg" class="card-img-top image-img"
-                                alt="Project three">
-                            <div class="card-body">
-                                <h5 class="card-title">Praça Cândido Portinari, Belo Horizonte-MG</h5>
 
-                            </div>
+                    <div class="card">
+                        <img src="img/Praca-Candido-Portinari-Belo-Horizonte.jpeg" class="card-img-top image-img"
+                            alt="Project three">
+                        <div class="card-body">
+                            <h5 class="card-title">Praça Cândido Portinari, Belo Horizonte-MG</h5>
+
                         </div>
-                    </a>
+                    </div>
+
                 </div>
                 <div class="col">
-                    <a href="projectfour.html">
-                        <div class="card">
-                            <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
-                            <div class="card-body">
-                                <h5 class="card-title">Tibagi, Parana</h5>
 
-                            </div>
+                    <div class="card">
+                        <img src="img/services.jfif" class="card-img-top image-img" alt="Project four">
+                        <div class="card-body">
+                            <h5 class="card-title">Tibagi, Parana</h5>
+
                         </div>
+                    </div>
                 </div>
-                </a>
+
             </div>
         </div>
     </section>
@@ -308,14 +308,16 @@
             <div class="context">
                 <div class="container_left parallax">
                     <h4>Informações</h4>
-                    <p>SoftFloor, piso de borracha granulada ecológica feita com pneus descartados, econômico,inteligente,moldável no local e feita em diversas cores.
+                    <p>SoftFloor, piso de borracha granulada ecológica feita com pneus descartados,
+                        econômico,inteligente,moldável no local e feita em diversas cores.
                         É recomendado para as áreas internas e externas para a sua obra como:
                         Piscina: Antiderrapante e drenagem.
                         Playground: Macio, perfeito para a segurança de crianças e limpo.
                         Esportivo: Anti-Impacto, perfeita para exercícios físicos.
                         Consulte todas as nossas opções: ( SoftFloor – Piso de Borracha Granulada Ecológica)
-                        Produto em EPDM ou SBR, com vários tipos de cores, atendimento personalizado, execução perfeita para a sua obra, fazemos seu projeto, orçamento gratuito pelo WhatsApp e E-mail
-                        </p>
+                        Produto em EPDM ou SBR, com vários tipos de cores, atendimento personalizado, execução perfeita
+                        para a sua obra, fazemos seu projeto, orçamento gratuito pelo WhatsApp e E-mail
+                    </p>
 
                     <div class="input_form">
                         <label for="name"></label>
@@ -425,6 +427,8 @@
     <section class="copy overflow">
         <p>copyright &copy;2022 created by
             <a href="https://www.linkedin.com/in/matheusvenanciocordeiro/" target="_blank">Matheus Venancio Cordeiro</a>
+            e
+            <a href="https://www.linkedin.com/in/luis-henrique-bb8763225/" target="_blank">Luis Henrique</a>
         </p>
 
     </section>
